Revert "Navigation Init And Auth Protorype"
This reverts commit f1d8126ddbeaed36186ca65aa32999b84dd87378.

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "myprojectexpo",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/image/logo.png",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
